tests/parser/bad/lmodule-import-cid-as-cid-with.scilla
scilla_version 0

(* unnecessary semicolon *)
import BoolUtils as Boolean ;

contract Test
()
